--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         document.getElementById('status').innerText = `Battery Level: ${batteryLevel}%`;
       } catch (error) {
-        console.error('Error:', error);
+        console.error('Error---:', error);
         document.getElementById('status').innerText = `Error: ${error.message}`;
       }
     });
